# aosp_platform_system_keymint

./: README.md  TEST_MAPPING
boringssl/: Android.bp  Cargo.toml
boringssl/src/: aes.rs  aes_cmac.rs  des.rs  ec.rs  eq.rs  err.rs  hmac.rs  lib.rs  rng.rs  rsa.rs  tests.rs  types.rs
common/: Android.bp  Cargo.toml  generated.cddl
common/src/: crypto.rs  keyblob.rs  lib.rs  tag.rs
common/src/crypto/: aes.rs  des.rs  ec.rs  rsa.rs  traits.rs
common/src/keyblob/: legacy.rs
common/src/keyblob/legacy/: tests.rs
common/src/tag/: info.rs
derive/: Cargo.toml
hal/: Android.bp
hal/src/: env.rs  hal.rs  keymint.rs  lib.rs  tests.rs
ta/: Android.bp  Cargo.toml
ta/src/: cert.rs  clock.rs  device.rs  keys.rs  lib.rs  operation.rs  rkp.rs  secret.rs  tests.rs
tests/: Android.bp  Cargo.toml
tests/src/: lib.rs
tests/tests/: keyblob_test.rs
wire/: Android.bp  Cargo.toml
wire/src/: keymint.rs  legacy.rs  lib.rs  types.rs
